--- a/instagram/templates/users/base.html
+++ b/instagram/templates/users/base.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 
     {% if title %}
-        <title>AvechiGram {{ title }}</title>
+        <title>InstaGram- {{ title }}</title>
     {% else %}
-        <title>AvechiGram</title>
+        <title>InstaGram-</title>
     {% endif %}
 </head>
 <body>
