--- a/instagram/templates/users/register.html
+++ b/instagram/templates/users/register.html
@@ -75,7 +75,7 @@
           <li>LANGUAGE</li>
           <br>
 
-          <li style="font-size:10px;"> <strong>© 2019 Avechigram</strong></li>
+          <li style="font-size:10px;"> <strong>© 2021 InstaGram</strong></li>
         </ul>
 
       </div>
